--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,5 @@
 @import "blocks/header.scss";
 @import "blocks/input.scss";
 @import "blocks/logo.scss";
+@import "blocks/galery.scss";
+@import "blocks/menu.scss";
