--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -4,10 +4,18 @@
   display: block;
   transform: translateY(-20px);
   margin: 0 auto;
+
   &__img {
     display: block;
     margin: 0 auto;
+
+    &--white {
+      filter: invert(100%);
+
+    }
+
   }
+
 
   @include onTablet {
     display: grid;
@@ -15,9 +23,21 @@
     transform: translateY(0);
     grid-column: 5/ 7;
     margin: 0;
+
+    &--menu {
+      grid-column: 2 / 3;
+      justify-self: center;
+    }
   }
   @include onDesctop {
     width: 170px;
     grid-column: 6 ;
+
+    &--menu {
+      grid-column: 2 / 3;
+      justify-self: center;
+    }
   }
+
+
 }
