--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,5 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks.scss/header.scss";
+@import "./blocks.scss/container.scss";
