added header + 2 sections

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,22 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@500;700&display=swap");
+* {
+  box-sizing: border-box;
 }
+
+body,
+h1,
+h2,
+p,
+header {
+  margin: 0;
+}
+
+@import "header.scss";
+@import "button.scss";
+@import "events.scss";
+@import "event.scss";
+@import "lecture.scss";
+@import "gallery.scss";
