--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -3,4 +3,16 @@
   &:hover {
     #{$_property}: $_toValue;
   }
+};
+
+@mixin onDesktop {
+  @media (min-width: 1279px) {
+    @content
+  }
+};
+
+@mixin onTablet {
+  @media (min-width: 767px) and (max-width: 1278px) {
+    @content
+  }
 }
