--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,7 +1,6 @@
 
 .header {
   display: flex;
-  // height: 76vh;
   flex-direction: column-reverse;
   margin-bottom: 70px;
 
@@ -28,7 +27,7 @@
     margin-bottom: 20px;
     width: 100%;
     height: 329px;
-
+  
     @include onTablet {
       height: 384px;
       grid-column: 4/ span 3;
@@ -92,8 +91,7 @@
     }
 
   &__title{
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
+    font-family: $firstFont;
     font-weight: 700;
     font-size: 45px;
     line-height: 45px;
@@ -119,7 +117,7 @@
 
     @include onDesctop {
       display: block;
-      font-family: 'IBM Plex Sans', sans-serif;
+      font-family: $secondFont;
       position: absolute;
       left: 20px;
       bottom: 15px;
@@ -138,7 +136,7 @@
         bottom: -32px;
         width: 1px;
         height: 70px;
-        background: #1A5A4C;
+        background: $green-color;
         transform: rotate(-90deg);
       }
     }
