--- a/src/styles/blocks/input.scss
+++ b/src/styles/blocks/input.scss
@@ -16,14 +16,12 @@
     width: 85%;
     height: 100%;
     text-decoration: none;
-    border: 1px solid rgba(26, 90, 76, 1);
+    border: 1px solid $green-color;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-weight: 500;
-    font-size: 16px;
+    @extend %descriptionBolder-text;
     color: #0F0E08;
 
     border-right: none;
@@ -34,7 +32,7 @@
   }
 
   &__arrow {
-    border: 1px solid rgba(26, 90, 76, 1);
+    border: 1px solid $green-color;
     width: 15%;
     height: 100%;
     border-left: none;
