--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,38 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%titleMobileStyle {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 36px;
+  text-align: center;
+  width: 280px;
+}
+
+%description-text {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4E4E4E;
+}
+
+%descriptionBolder-text {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+  color: #687480;
+}
+%descriptionBold-text {
+  font-family: 'IBM Plex Sans', sans-serif;
+  line-height: 24px;
+  font-weight: 700;
+  font-size: 16px;
+
+}
+
+%lectureMonserrat {
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+  font-size: 28px;
+  line-height: 28px;
 }
