--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,13 +1,18 @@
 .menu {
-  background-color: #1A5A4C;
+  background-color: $green-color;
+  height: 100vh;
+  z-index: 2;
 
   &__content {
-    height: 65vh;
+
     padding: 20px;
+
+    @include onTablet{
+      padding-top: 40px;
+    }
 
     @include onDesctop {
       padding-top: 40px;
-      height: 100vh;
     }
   }
 
@@ -40,6 +45,12 @@
   &__cross-icon {
     width: 18px;
     height: 18px;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+
   }
 
   &__list {
@@ -69,7 +80,7 @@
     display: inline-block;
     padding-bottom: 8px;
     border-bottom: 1px solid transparent;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: $secondFont;
     color: white;
     text-decoration: none;
     font-weight: bold;
@@ -87,7 +98,7 @@
 
   &__call {
     display: block;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: $secondFont;
     color: white;
     line-height: 21px;
     font-style: normal;
