--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,16 +4,9 @@
     margin: 0;
   }
 
-  &__section {
-
-  }
-
   &__section-title {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 100%;
-    text-align: center;
+    @extend %titleMobileStyle ;
+
     width: 280px;
     margin: 0 auto 40px;
 
