--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,5 +8,7 @@
 @import "blocks/header.scss";
 @import "blocks/input.scss";
 @import "blocks/logo.scss";
-@import "blocks/galery.scss";
+@import "blocks/events.scss";
 @import "blocks/menu.scss";
+@import "blocks/slider.scss";
+@import "blocks/galeries.scss";
