Create header without burger menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
-@import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./utils/normalize";
+@import "./utils/mixins";
+
+@import "./block/grid.scss";
+@import "./block/page.scss";
+@import "./block/header.scss";
