--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -18,8 +18,9 @@
   }
 
   &--big {
+    max-width: 1280px;
     position: relative;
-    margin-bottom: 150px;
+    margin: 0 auto 150px;
 
     @include onTablet {
       margin-bottom: 200px;
