--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,8 +1,9 @@
 
 .header {
+  max-width: 1280px;
   display: flex;
   flex-direction: column-reverse;
-  margin-bottom: 70px;
+  margin: 0 auto 70px;
 
   @include onTablet {
     display: grid;
@@ -27,7 +28,7 @@
     margin-bottom: 20px;
     width: 100%;
     height: 329px;
-  
+
     @include onTablet {
       height: 384px;
       grid-column: 4/ span 3;
