--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,7 +1,3 @@
-h1 {
-  @extend %h1;
-}
-
 .logo {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
@@ -12,4 +8,10 @@ h2 {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 700;
+}
+
+.menu {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 500;
 }
