--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,9 @@
 @import "fonts";
 @import "typography";
 
+@import "./blocks.scss/page.scss";
 @import "./blocks.scss/header.scss";
 @import "./blocks.scss/container.scss";
+@import "./blocks.scss/logo.scss";
+@import "./blocks.scss/menu.scss";
+@import "./blocks.scss/button.scss";
