--- a/src/styles/blocks.scss/container.scss
+++ b/src/styles/blocks.scss/container.scss
@@ -1,13 +1,17 @@
 .container {
-  max-width: 280px;
-  margin: 0 20px;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 20px;
 
   @include onTable {
-    max-width: 690px;
+    padding: 0 30px;
   }
 
   @include onDesktop {
-    max-width: 1170px;
-    margin: 0 55px;
+    padding: 0 55px;
+  }
+
+  @include design {
+    padding: 0 100px;
   }
 }
