added 2 sections(still a lot of work)

--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -17,14 +17,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    color: #687480;
+    color: $sub-gray;
     text-align: left;
     text-transform: uppercase;
-    padding: 20px 0px 10px;
+    padding: 20px 0 10px;
 
     @include onTablet {
       justify-content: flex-start;
@@ -37,11 +37,11 @@
     }
 
     &-date {
-      font-family: 'IBM Plex Sans';
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       font-weight: 700;
       line-height: 150%;
-      color: #1A5A4C;
+      color: $museum-green;
 
       @include onTablet {
         margin-left: 20px;
@@ -55,11 +55,11 @@
   }
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
-    color: #0F0E08;
+    color: $title-black;
     text-align: left;
 
     @include onTablet {
@@ -73,12 +73,12 @@
 
   &__text {
     margin-top: 10px;
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
-    color: #4E4E4E;
+    color: $dark-gray;
     text-align: left;
 
     @include onDesktop {
