--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -3,11 +3,11 @@
   height: 100vh;
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
-    color: #0F0E08;
+    color: $title-black;
     text-align: center;
     margin-top: 100px;
     margin-bottom: 40px;
@@ -50,7 +50,7 @@
       }
     }
 
-    &:nth-child(2){
+    &:nth-child(2) {
       @include onTablet {
         display: block;
       }
