--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -14,14 +14,14 @@
   }
 
   @include onTablet {
-    height: 60vh;
+    height: 55vh;
     background-image: url(../images/header-tablet.png);
     background-position: top right;
-    background-size: 50%;
+    background-size: 55%;
   }
 
   @include onDesktop {
-    height: 80vh;
+    height: 90vh;
     background-image: url(../images/header.png);
     background-position: top right;
     background-size: 60%;
@@ -29,12 +29,12 @@
 
   &__title {
     padding-top: 10px;
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 30px;
     line-height: 100%;
     text-align: center;
-    color: #0F0E08;
+    color: $title-black;
     text-transform: uppercase;
 
     @include onTablet {
@@ -61,40 +61,6 @@
         font-size: 72px;
         line-height: 120%;
       }
-    }
-  }
-
-  &__form {
-    width: 70%;
-    display: flex;
-    margin: 20px auto;
-    font-family: 'IBM Plex Sans';
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-    color: #0F0E08;
-    border: 1px solid #1A5A4C;
-    text-align: center;
-    justify-content: space-between;
-    align-items: center;
-
-    &-description {
-      margin: 0 auto;
-      text-transform: uppercase;
-    }
-
-    @include onTablet {
-      margin-top: 40px;
-      margin-left: 34px;
-      width: 30%;
-      height: 70px;
-    }
-
-    @include onDesktop {
-      margin-top: 10%;
-      margin-left: 200px;
-      width: 20%;
-      height: 70px;
     }
   }
 }
