--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,18 +1,11 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
-  }
-};
-
 @mixin onDesktop {
   @media (min-width: 1279px) {
-    @content
+    @content;
   }
-};
+}
 
 @mixin onTablet {
   @media (min-width: 767px) and (max-width: 1278px) {
-    @content
+    @content;
   }
 }
