--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,7 +1,7 @@
 .button {
   width: 50px;
   height: 50px;
-  background-color: #1A5A4C;
+  background-color: $museum-green;
   background-image: url(../images/arrow.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -14,5 +14,9 @@
   @include onDesktop {
     height: 70px;
     width: 70px;
+  }
+
+  &--red {
+    background-image: url(../images/arrow-black.png);
   }
 }
