--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -2,11 +2,11 @@
   text-align: center;
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
-    color: #0F0E08;
+    color: $title-black;
     width: 80%;
     margin: 0 auto;
 
