--- a/src/styles/lecture.scss
+++ b/src/styles/lecture.scss
@@ -29,7 +29,7 @@
     margin-top: 40%;
 
     background: #fff;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     @include onTablet {
       width: 60%;
@@ -46,12 +46,12 @@
   }
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 24px;
     line-height: 100%;
     text-align: center;
-    color: #0F0E08;
+    color: $title-black;
     padding-top: 20px;
 
     @include onTablet {
