--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "fonts";
 @import "typography";
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@500;700&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -14,9 +15,14 @@ header {
   margin: 0;
 }
 
+
+@import "page.scss";
 @import "header.scss";
 @import "button.scss";
 @import "events.scss";
 @import "event.scss";
 @import "lecture.scss";
 @import "gallery.scss";
+@import "subscription.scss";
+@import "form.scss";
+@import "info.scss";
