add block current-events

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -3,12 +3,12 @@
   font-style: normal;
 }
 
-h1,
-h2 {
-  font-family: "Montserrat", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-}
+// h1,
+// h2 {
+//   font-family: "Montserrat", sans-serif;
+//   font-style: normal;
+//   font-weight: 700;
+// }
 
 .menu {
   font-family: "IBM Plex Sans", sans-serif;
