--- a/src/styles/blocks.scss/page.scss
+++ b/src/styles/blocks.scss/page.scss
@@ -1,5 +1,16 @@
 .page {
 
+  &__header {
+    margin-bottom: 70px;
+
+    @include onTable {
+      margin-bottom: 90px;
+    }
+    @include onDesktop {
+      margin-bottom: 320px;
+    }
+  }
+
   &__menu {
     position: fixed;
     top: 0;
