--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,5 @@
 @import "./blocks.scss/logo.scss";
 @import "./blocks.scss/menu.scss";
 @import "./blocks.scss/button.scss";
+@import "./blocks.scss/main_.scss";
+@import "./blocks.scss/current-events.scss";
