add block About us

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,4 @@
 @import "./blocks.scss/button.scss";
 @import "./blocks.scss/main_.scss";
 @import "./blocks.scss/current-events.scss";
+@import "./blocks.scss/about-us.scss";
