Create 2 blocks: events and top event

--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -189,6 +189,7 @@
       font-size: 14px;
       line-height: 100%;
       color: #687480;
+      cursor: none;
 
       @include onDesktop {
         display: block;
