--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -1,3 +1,52 @@
 .page {
   font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: #687480;
+
+  &__main {
+    padding-left: 20px;
+    padding-right: 20px;
+
+    @include onTablet {
+      padding-left: 35px;
+      padding-right: 35px;
+    }
+
+    @include onDesktop {
+      padding-left: 55px;
+      padding-right: 55px;
+    }
+  }
+
+  &__section {
+    margin-bottom: 100px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+
+    &--lecture {
+      margin-bottom: 50px;
+
+      @include onDesktop {
+        margin-bottom: 100px;
+      }
+    }
+  }
+
+  &__section-title {
+    @extend %titles;
+
+    @include onTablet {
+      font-size: 48px;
+      text-align: start;
+    }
+  }
 }
