--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,10 @@
 
 @import "./utils/normalize";
 @import "./utils/mixins";
+@import "./utils/extends";
 
 @import "./block/grid.scss";
 @import "./block/page.scss";
 @import "./block/header.scss";
+@import "./block/events.scss";
+@import "./block/lecture.scss";
