added photos, styles and footer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,5 @@
 @import "blocks/menu.scss";
 @import "blocks/slider.scss";
 @import "blocks/galeries.scss";
+@import "blocks/footer.scss";
+@import "blocks/sign-up.scss";
