--- a/src/styles/blocks/input.scss
+++ b/src/styles/blocks/input.scss
@@ -1,8 +1,9 @@
 .input {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
+  width: 280px;
   height: 50px;
+  margin: 0 auto;
 
   @include onTablet {
     width: 270px;
@@ -40,9 +41,16 @@
     @include onTablet {
       width: 25%;
     }
+
   }
   &__img{
     width: 100%;
     height: 100%;
+
+    &--right {
+      width: 24px;
+      height: 24px;
+      margin: auto;
+    }
   }
 }
