--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,9 +3,20 @@
   &__body {
     margin: 0;
   }
+  &__section {
+    &:nth-child(2) {
+      margin-bottom: 150px;
+    }
+
+    @include onTablet {
+      &:nth-child(2) {
+        margin-bottom: 0px;
+      }
+  }
+  }
 
   &__section-title {
-    @extend %titleMobileStyle ;
+    @extend %titleMobileStyle;
 
     width: 280px;
     margin: 0 auto 40px;
