--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -2,7 +2,7 @@
   width: 100%;
   padding: 5px;
   height: 410px;
-  margin-bottom: 100px;
+  // margin-bottom: 100px;
   overflow: hidden;
 
   @include onTablet {
@@ -31,7 +31,7 @@
 
   &__img {
     width: 280px;
-    height: 100%;
+    height: 409px;
     overflow: hidden;
 
     @include onTablet {
@@ -72,6 +72,7 @@
     }
   }
 }
+
 
 #radio1:checked ~ .first {
   margin-left: 0;
