--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -17,4 +17,13 @@
       transform: translateX(0);
     }
   }
+  &__section {
+    margin-bottom: 100px;
+    @include onTablet {
+      margin-bottom: 88px;
+    }
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+  }
 }
