--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,8 @@
 @import "blocks/button.scss";
 @import "blocks/menu.scss";
 @import "blocks/logo.scss";
+@import "blocks/container.scss";
+@import "blocks/events.scss";
+@import "blocks/event.scss";
+@import "blocks/grid.scss";
+@import "blocks/special-event.scss";
