add block Gallery

--- a/src/styles/blocks.scss/main_.scss
+++ b/src/styles/blocks.scss/main_.scss
@@ -20,4 +20,27 @@
   &__current-events {
     margin-bottom: 60px;
   }
+
+  &__gallery {
+    height: 410px;
+    margin-bottom: 200px;
+
+    @include onTable {
+      height: 545px;
+    }
+  }
+
+  &__gallery-desktop {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+    }
+  }
+
+  &__gallery-phone {
+    @include onDesktop {
+      display: none;
+    }
+  }
 }
