--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,5 @@
 @import "./blocks.scss/main_.scss";
 @import "./blocks.scss/current-events.scss";
 @import "./blocks.scss/about-us.scss";
+@import "./blocks.scss/gallery_phone.scss";
+@import "./blocks.scss/gallery_desktop.scss";
