add block Contacts-futer

--- a/src/styles/blocks.scss/main_.scss
+++ b/src/styles/blocks.scss/main_.scss
@@ -22,11 +22,11 @@
   }
 
   &__gallery {
-    height: 410px;
-    margin-bottom: 200px;
+    height: 100%;
+    margin-bottom: 100px;
 
     @include onTable {
-      height: 545px;
+      margin-bottom: 130px;
     }
   }
 
@@ -35,6 +35,7 @@
 
     @include onDesktop {
       display: block;
+      margin-bottom: 200px;
     }
   }
 
@@ -43,4 +44,17 @@
       display: none;
     }
   }
+
+  &__subscription {
+    margin-bottom: 50px;
+  }
+
+  &__button-up {
+    position: fixed;
+    right: 20px;
+
+    top: 80vh;
+
+  }
+
 }
