--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,6 @@
 @import "./blocks.scss/about-us.scss";
 @import "./blocks.scss/gallery_phone.scss";
 @import "./blocks.scss/gallery_desktop.scss";
+@import "./blocks.scss/subscription.scss";
+@import "./blocks.scss/footer.scss";
+@import "./blocks.scss/buton-up.scss";
