--- a/src/styles/blocks.scss/page.scss
+++ b/src/styles/blocks.scss/page.scss
@@ -1,4 +1,5 @@
 .page {
+  scroll-behavior: smooth;
 
   &__header {
     margin-bottom: 70px;
@@ -22,5 +23,11 @@
     &:target {
       transform: translateY(0);
     }
+  }
+
+  &__button-up {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
   }
 }
