fixed small issues

--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -23,7 +23,7 @@
     padding-left: 32px;
 
     &::placeholder {
-      font-family: 'Montserrat';
+      font-family: "Montserrat", sans-serif;
       font-style: normal;
       font-weight: 400;
       font-size: 14px;
