--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -72,23 +72,23 @@
     }
 
     &-title {
-      font-family: 'IBM Plex Sans';
+      font-family: "IBM Plex Sans", sans-serif;
       font-style: normal;
       font-weight: 400;
       font-size: 14px;
       line-height: 140.62%;
-      color: #0F0E08;
+      color: #0f0e08;
       margin-bottom: 20px;
 
     }
 
     &-schedule {
-      font-family: 'IBM Plex Sans';
+      font-family: "IBM Plex Sans", sans-serif;
       font-style: normal;
       font-weight: 400;
       font-size: 14px;
       line-height: 150%;
-      color: #0F0E08;
+      color: #0f0e08;
     }
 
     &-contacts {
@@ -119,11 +119,11 @@
 
     &-link {
       margin: 10px 20px;
-      font-family: 'IBM Plex Sans';
+      font-family: "IBM Plex Sans", sans-serif;
       font-weight: 400;
       font-size: 14px;
       line-height: 100%;
-      color: #0F0E08;
+      color: #0f0e08;
 
     }
   }
@@ -131,12 +131,12 @@
   &__copyright {
     margin-top: 70px;
     margin-bottom: 50px;
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 300;
     font-size: 12px;
     line-height: 200%;
     text-align: center;
-    color: #0F0E08;
+    color: #0f0e08;
 
     @include onTablet {
       grid-column: 2 / 6;
