--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -1,8 +1,10 @@
 .subscription {
+  position: relative;
   background-image: url(../images/subscription.png);
   background-size: cover;
   background-position: center;
   padding: 88px 20px;
+  margin-top: 500px;
 
   @include onTablet {
     background-image: url(../images/subscription-desktop.png);
@@ -19,18 +21,17 @@
     font-size: 36px;
     line-height: 100%;
     text-align: center;
-    color: #FFFFFF;
-
+    color: #fff;
   }
 
   &__description {
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 150%;
     text-align: center;
-    color: #FFFFFF;
+    color: #fff;
     margin-top: 20px;
   }
 
@@ -39,7 +40,7 @@
     background-color: #fff;
 
     &-button {
-      background-color: #F14A27;
+      background-color: #f14a27;
     }
   }
 }
