--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -26,21 +26,25 @@
   }
 
   &__content {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-
-    @include onTablet {
-      padding: 0 34px 34px;
+    @include onDesktop {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      column-gap: 20px;
+      row-gap: 20px;
+      padding: 55px;
     }
 
-    @include onDesktop {
-      flex-wrap: wrap;
+    @include onTablet {
+      display: flex;
+      padding: 0 34px 34px;
+      gap: 20px;
     }
   }
 
   &__image {
-    width: max-content;
+    position: relative;
+    width: 100%;
+    height: 100%;
 
     &:not(:first-child) {
       display: none;
@@ -60,6 +64,27 @@
       }
     }
 
+    &-first {
+      grid-column: 1 / 3;
+      grid-row: 1 / 2;
+    }
+
+    &-third {
+      grid-column: 3 / 7;
+    }
+
+    &-fourth {
+      grid-column: 1 / 5;
+    }
+
+    &-fifth {
+      grid-column: 5 / 7;
+    }
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
   }
 
   &__selector {
