--- a/src/styles/lecture.scss
+++ b/src/styles/lecture.scss
@@ -6,27 +6,34 @@
   align-items: center;
 
   &__image {
-    position: absolute;
-    left: 0;
     width: 100%;
-    z-index: -1;
+    height: 210px;
+    max-height: 700px;
+    margin-bottom: 20px;
+    position: absolute;
+
+    &::after {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
+    }
 
     @include onTablet {
+      height: 390px;
       width: 90%;
-      left: auto;
     }
     @include onDesktop {
       width: 100%;
-      height: 70%;
+      height: 550px;
     }
   }
 
   &__subtitle {
+    position: relative;
     flex-wrap: wrap;
     width: 90%;
-
     padding: 20px;
-    margin-top: 40%;
+    margin-top: 150px;
 
     background: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
@@ -35,13 +42,14 @@
       width: 60%;
       justify-content: space-between;
       padding: 45px 55px;
-      margin-top: 50%;
+      margin-top: 300px;
     }
 
     @include onDesktop {
       width: 50%;
       justify-content: space-between;
       padding: 45px 100px;
+      margin-top: 450px;
     }
   }
 
