--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,5 @@
 $c-gray: #eee;
 $museum-green: #1a5a4c;
-$title-black: #0F0E08;
+$title-black: #0f0e08;
 $sub-gray: #687480;
-$dark-gray: #4E4E4E;
+$dark-gray: #4e4e4e;
