Create 2 blocks: gallery and subscription

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,6 @@
 @import "./block/header.scss";
 @import "./block/events.scss";
 @import "./block/lecture.scss";
+@import "./block/gallery.scss";
+@import "./block/slider.scss";
+@import "./block/subscription.scss";
