--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -7,3 +7,16 @@
   text-align: center;
   color: #0f0e08;
 }
+
+%grid {
+  @include onTablet {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 30px;
+  }
+
+  @include onDesktop {
+    grid-template-columns: repeat(12, 1fr);
+    row-gap: 30px;
+  }
+}
