--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,5 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./blocks/reset.scss";
+@import "./blocks/normalize.scss";
+@import "./blocks/mixines.scss";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/header.scss";
