--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,246 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+* {
+  box-sizing: border-box;
+}
 
-body {
-  background: $c-gray;
+p,
+header,
+div,
+img,
+h1,
+h2,
+h3,
+h4,
+li,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+@mixin onTablet {
+  @media (min-width: 690px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1170px) {
+    @content;
+  }
+}
+
+.page {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+
+  &__body {
+    margin: 0 auto;
+  }
+}
+
+.header {
+  max-width: 1280px;
+
+  // max-width: 100%;
+  // height: 300px;
+  display: flex;
+  flex-direction: column-reverse;
+  // flex-direction: column-reverse;
+  margin: 0 auto px;
+
+  @include onTablet {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    height: 384px;
+
+    @include onDesktop() {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      height: 655px;
+    }
+  }
+
+  &__block {
+    padding: 0 20px;
+    width: 100%;
+    position: relative;
+
+    @include onTablet() {
+      padding: 45px 37px;
+    }
+    @include onDesktop() {
+      padding: 45px 58px;
+    }
+  }
+
+  &__menu {
+    display: block;
+
+    @include onTablet {
+      margin-bottom: 70px;
+    }
+    @include onDesktop() {
+      margin-bottom: 149px;
+    }
+
+    &--menu-opener {
+      height: 20px;
+      width: 20px;
+    }
+  }
+
+  &__title {
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 100%;
+    margin-bottom: 20px;
+
+    @include onTablet {
+      margin-bottom: 38px;
+    }
+    @include onDesktop() {
+      margin-bottom: 89px;
+    }
+  }
+
+  &__tickets {
+    display: flex;
+    flex-wrap: wrap;
+    width: 280px;
+    height: 50px;
+    border: 1px solid #1a5a4c;
+
+    @include onTablet() {
+      width: 270px;
+      height: 70px;
+    }
+    @include onDesktop() {
+      width: 270px;
+      height: 70px;
+      margin-left: 40%;
+    }
+
+    &-text {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      color: #0f0e08;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 100%;
+      width: 85%;
+
+      @include onTablet() {
+        width: 75%;
+      }
+      @include onDesktop() {
+        width: 75%;
+      }
+    }
+
+    &-go {
+      border: 1px solid #1a5a4c;
+      width: 15%;
+      height: 100%;
+      // border-left: none;
+      background-color: #1a5a4c;
+
+      @include onTablet() {
+        width: 25%;
+      }
+    }
+
+    &-img {
+      width: 100%;
+      height: 100%;
+
+      &:hover {
+        animation-name: spin;
+        animation-duration: 5000ms;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+
+        @keyframes spin {
+          from {
+            transform: rotate(0deg);
+          }
+          to {
+            transform: rotate(360deg);
+          }
+        }
+      }
+    }
+  }
+
+  &__events {
+    display: none;
+    @include onDesktop() {
+      display: block;
+
+      transform-origin: 0 0;
+      transform: rotate(-90deg);
+      font-family: "IBM Plex Sans", sans-serif;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 100%;
+      position: relative;
+
+      left: 17px;
+      bottom: -24px;
+
+      &::before {
+        content: "";
+        display: block;
+        position: absolute;
+
+        right: 490px;
+        bottom: -28px;
+        width: 1px;
+        height: 70px;
+        background: #1a5a4c;
+        transform: rotate(-90deg);
+      }
+    }
+  }
+
+  &__picture {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(/images/NAMU_header.jpg);
+    height: 320px;
+    width: 300px;
+    padding: 14px 40px;
+    margin-bottom: 20px;
+
+    &-logo {
+      text-decoration: none;
+      font-family: "Montserrat", sans-serif;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 100%;
+      text-align: center;
+      color: black;
+      height: 100%;
+      width: 100%;
+    }
+
+    @include onTablet {
+      height: 384px;
+      grid-column: 4 / 3;
+    }
+
+    @include onDesktop() {
+      padding: 40px;
+      width: 725px;
+      height: 655px;
+      grid-column: 5 / 13;
+      background-size: cover;
+    }
+  }
 }
