added menu, fixed small issues in footer, gallery still on development stage

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -21,10 +21,10 @@
   }
 
   @include onDesktop {
-    height: 90vh;
     background-image: url(../images/header.png);
     background-position: top right;
     background-size: 60%;
+    padding-bottom: 200px;
   }
 
   &__title {
@@ -62,5 +62,34 @@
         line-height: 120%;
       }
     }
+  }
+
+  &__optional {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+
+      font-family: "IBM Plex Sans", sans-serif;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      color: #687480;
+
+      &::before {
+        content: " ";
+        position: absolute;
+        top: -25px;
+        right: 100px;
+        transform: rotate(-90deg);
+
+        width: 1px;
+        height: 70px;
+        background-color: #687480;
+        color: #687480;
+      }
+    }
+    position: absolute;
+    transform: rotate(-90deg);
   }
 }
