--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -27,6 +27,7 @@
       flex-direction: column;
       align-items: flex-start;
       justify-content: flex-start;
+      padding-left: 36px;
     }
 
     @include onDesktop {
@@ -34,6 +35,7 @@
       align-items: flex-start;
       justify-content: flex-start;
       grid-column: 1 / 4;
+      padding-left: 50px;
     }
 
     &-logos {
@@ -63,7 +65,6 @@
 
     @include onDesktop {
       border-bottom: transparent;
-      border-right: 1px solid rgba(26, 90, 76, 0.5);
       padding-top: 48px;
     }
 
@@ -77,7 +78,7 @@
       font-weight: 400;
       font-size: 14px;
       line-height: 140.62%;
-      color: #0f0e08;
+      color: $title-black;
       margin-bottom: 20px;
 
     }
@@ -88,7 +89,7 @@
       font-weight: 400;
       font-size: 14px;
       line-height: 150%;
-      color: #0f0e08;
+      color: $title-black;
     }
 
     &-contacts {
@@ -98,6 +99,9 @@
 
       @include onDesktop {
         grid-column: 4 / 6;
+
+        border-right: 1px solid rgba(26, 90, 76, 0.5);
+        padding-right: 65px;
       }
     }
 
@@ -123,7 +127,7 @@
       font-weight: 400;
       font-size: 14px;
       line-height: 100%;
-      color: #0f0e08;
+      color: $title-black;
 
     }
   }
@@ -136,14 +140,18 @@
     font-size: 12px;
     line-height: 200%;
     text-align: center;
-    color: #0f0e08;
+    color: $title-black;
 
     @include onTablet {
       grid-column: 2 / 6;
+      display: flex;
+      justify-content: space-between;
     }
 
     @include onDesktop {
       grid-column: 1 / 12;
+      display: flex;
+      justify-content: space-between;
     }
   }
 
