--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,11 +17,13 @@ header {
 
 @import "page.scss";
 @import "header.scss";
+@import "menu.scss";
 @import "button.scss";
 @import "events.scss";
 @import "event.scss";
 @import "lecture.scss";
 @import "gallery.scss";
+@import "swiper.scss";
 @import "subscription.scss";
 @import "form.scss";
 @import "info.scss";
