--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,4 +1,5 @@
 .page {
+  scroll-behavior: smooth;
   &__subscription {
     margin-top: 100px;
 
@@ -8,6 +9,14 @@
 
     @include onTablet {
       margin-top: 0;
+    }
+  }
+
+  &__menu {
+    transform: translateX(-100%);
+
+    &:target {
+      transform: translateX(0);
     }
   }
 }
