--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -197,7 +197,7 @@ ul {
         display: block;
         position: absolute;
 
-        right: 490px;
+        right: 320px;
         bottom: -28px;
         width: 1px;
         height: 70px;
@@ -241,6 +241,98 @@ ul {
       height: 655px;
       grid-column: 5 / 13;
       background-size: cover;
+    }
+  }
+}
+
+.current-events {
+  height: 210px;
+
+  &__text {
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 100%;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  &__image {
+    width: 280px;
+    height: 210px;
+    margin: 0 20px 20px;
+
+    &-pic {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__description {
+    width: 280px;
+    margin: 0 20px 20px;
+  }
+
+  &__date {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 15px;
+  }
+
+  &__text-grey {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #687480;
+  }
+
+  &__text-date {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #1a5a4c;
+  }
+
+  &__title {
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 100%;
+    color: #0f0e08;
+    margin-bottom: 20px;
+  }
+
+  &__text-description {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 150%;
+    color: #4e4e4e;
+  }
+
+  &__bottom {
+    display: block;
+
+    &__bottom--image {
+      width: 320px;
+      height: 210px;
+      margin-bottom: 150px;
+
+      &__bottom--image-pic {
+        width: 100px;
+        height: 100px;
+        margin-bottom: 150px;
+        object-fit: property;
+
+      }
     }
   }
 }
