--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,199 @@
-@import "utils";
+@import "blocks/reset";
+@import "utils/vars";
+@import "utils/mixins";
+@import "utils/extends";
 @import "fonts";
 @import "typography";
+@import "blocks/grid";
 
 body {
   background: $c-gray;
+  color: $c-text;
+
+  a {
+    color: $c-text;
+  }
+}
+
+.container {
+  max-width: 1280px;
+  padding: 0 20px;
+  margin: 0 auto;
+
+  @include onTablet {
+    padding: 0 34px;
+  }
+
+  @include onDesktop {
+    padding: 0 55px;
+  }
+}
+
+.logo {
+  display: block;
+  text-transform: uppercase;
+  //color: #0F0E08;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+  width: 100%;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+}
+
+.menu {
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: url("../images/menu.svg") center/cover;
+
+  &--close {
+    background-image: url("../images/cross.svg");
+  }
+}
+
+.header {
+  @include onTablet {
+    height: 390px;
+  }
+
+  @include onDesktop {
+    height: 660px;
+  }
+
+  &__bg {
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: -1;
+
+    &--img {
+      display: block;
+      content: " ";
+      height: 300px;
+      background: url("../images/bg.png") left top/cover no-repeat;
+      z-index: -1;
+
+      @include onTablet {
+        height: 390px;
+      }
+
+      @include onDesktop {
+        height: 660px;
+      }
+    }
+  }
+
+  &__top {
+    height: 300px;
+
+    @include onTablet {
+      height: auto;
+    }
+
+    @include onDesktop {
+      height: auto;
+    }
+  }
+
+  &__top-wrap {
+    position: relative;
+    padding-top: 9px;
+
+    @include onTablet {
+      padding-top: 15px;
+    }
+
+  }
+
+  &__menu {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  &__logo {
+    display: block;
+  }
+
+  &__content {
+    margin: 20px 0 0;
+    gap: 20px;
+    display: flex;
+
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 120%;
+    //color: #0F0E08;
+
+    text-align: center;
+
+    @include onTablet {
+      align-items: start;
+      text-align: start;
+      font-size: 54px;
+      margin: 60px 0 0;
+      gap: 40px;
+    }
+
+    @include onDesktop {
+      margin: 140px 0 0;
+      gap: 90px;
+      font-size: 72px;
+    }
+  }
+}
+
+.header-action {
+
+  display: flex;
+  width: 100%;
+  min-width: 270px;
+  max-width: 320px;
+  box-sizing: border-box;
+  border: 1px solid #1a5a4c;
+
+  @include onDesktop {
+    align-self: end;
+  }
+
+  &__text {
+
+    width: 100%;
+    text-align: center;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 70px;
+    //color: #0F0E08;
+    text-transform: uppercase;
+  }
+
+  &__button {
+    flex-shrink: 0;
+    width: 70px;
+    height: 70px;
+    background: #1a5a4c;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__arrow {
+    width: 12px;
+    height: 12px;
+    background: url("../images/arrow-w.svg") center/contain no-repeat;
+  }
 }
