Add footer, connected swiper

--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -12,6 +12,15 @@
     @include onDesktop {
       margin-top: 56px;
     }
+
+    &--desktop {
+      display: none;
+
+      @include onDesktop {
+        display: grid;
+      }
+    }
+
   }
 
   &__image {
