--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -6,6 +6,8 @@
   line-height: 100%;
   color: #687480;
 
+  scroll-behavior: smooth;
+
   &__main {
     padding-left: 20px;
     padding-right: 20px;
@@ -47,6 +49,21 @@
     @include onTablet {
       font-size: 48px;
       text-align: start;
+    }
+  }
+
+  &__footer {
+    padding-left: 20px;
+    padding-right: 20px;
+
+    @include onTablet {
+      padding-left: 35px;
+      padding-right: 35px;
+    }
+
+    @include onDesktop {
+      padding-left: 55px;
+      padding-right: 55px;
     }
   }
 }
