--- a/src/styles/block/subscription.scss
+++ b/src/styles/block/subscription.scss
@@ -66,10 +66,12 @@
 
   &__input {
     border-width: 0;
+    border-left: 1px solid #000;
     flex-basis: 80%;
     padding-left: 24px;
 
     @include onTablet {
+      border-width: 0;
       flex-basis: 85%;
     }
 
