--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,5 +9,7 @@
 @import "./block/events.scss";
 @import "./block/lecture.scss";
 @import "./block/gallery.scss";
+@import "./block/swiper.scss";
 @import "./block/slider.scss";
 @import "./block/subscription.scss";
+@import "./block/footer.scss";
