add all suggestions

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -68,12 +68,8 @@
 
   }
 
-  &__item {
+  &__item:not(:last-child) {
     margin-bottom: 24px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
   }
 
   &__link {
