--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -17,6 +17,15 @@
     grid-template-columns: repeat(12, minmax(70px, 1fr));
   }
 
+  &__logo {
+    transition: filter 0.3s, transform 0.3s;
+
+    &:hover {
+      filter: drop-shadow(1px 1px 0.75rem $green-color);
+      transform: scale(1.1);
+    }
+  }
+
   &__social{
     display: flex;
     align-items: center;
@@ -35,6 +44,12 @@
     width: 24px;
     height: 24px;
     cursor: pointer;
+    transition: filter 0.3s, transform 0.3s;
+
+    &:hover {
+      filter: drop-shadow(1px 1px 0.75rem $green-color);
+      transform: scale(1.1);
+    }
   }
 
   &__facebook-img {
@@ -48,6 +63,12 @@
     height: 24px;
     margin-left: 20px;
     cursor: pointer;
+    transition: filter 0.3s, transform 0.3s;
+
+    &:hover {
+      filter: drop-shadow(1px 1px 0.75rem $green-color);
+      transform: scale(1.1);
+    }
     @include onDesctop {
       margin-left: 2px;
     }
@@ -144,6 +165,7 @@
       grid-column: 2 / span 4;
       grid-row: 3;
     }
+
     @include onDesctop {
       transform: rotate(90deg);
       width: 260px;
@@ -158,6 +180,7 @@
     font-family: inherit;
     color: black;
     transition: text-shadow 0.3s , color 0.3s;
+    
     &:hover {
       color: $green-color;
       text-shadow: 3px 4px 7px rgba(81,67,21,0.8);
