--- a/src/styles/blocks/input.scss
+++ b/src/styles/blocks/input.scss
@@ -4,6 +4,11 @@
   width: 280px;
   height: 50px;
   margin: 0 auto;
+  transition: box-shadow 0.3s;
+
+  &:hover {
+    box-shadow: $green-color 0px 3px 8px;
+  }
 
   @include onTablet {
     width: 270px;
