--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -1,6 +1,6 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 130px);
   column-gap: 20px;
 
   @include onTablet {
@@ -30,6 +30,17 @@
 
     @include onDesktop {
       display: grid;
+    }
+    &-footer {
+      display: grid;
+
+      @include onTablet {
+        display: grid;
+      }
+
+      @include onDesktop {
+        display: grid;
+      }
     }
   }
 
