--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -19,6 +19,9 @@
   }
   &__section {
     margin-bottom: 100px;
+    &:last-child {
+      margin-bottom: 50px;
+    }
     @include onTablet {
       margin-bottom: 88px;
     }
