--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,13 +1,21 @@
 .container {
   margin: 0 auto;
-  min-width: 280px;
+  max-width: 280px;
   padding: 0 20px;
   @include onTablet {
-    min-width: 700px;
+    max-width: 700px;
     padding: 0 34px;
   }
   @include onDesktop {
-    min-width: 1170px;
+    max-width: 1170px;
     padding: 0 55px;
+  }
+}
+
+.wrapper {
+  margin: auto 0;
+  max-width: 130px;
+  @include onTablet {
+    max-width: 460px;
   }
 }
