--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,7 @@
 @import "blocks/event.scss";
 @import "blocks/grid.scss";
 @import "blocks/special-event.scss";
+@import "blocks/swiper.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/gallery.scss";
+@import "blocks/footer.scss";
