--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -6,6 +6,7 @@
   padding: 88px 20px;
 
   @include onTablet {
+    margin-top: 50px;
     background-image: url(../images/subscription-desktop.png);
   }
 
