--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,80 @@
 h1 {
   @extend %h1;
 }
+
+h2 {
+  @extend %h1;
+  font-size: var(--h2-font-size);
+  line-height: 1.2;
+  text-align: center;
+
+  @include onTablet {
+    font-size: 54px;
+    text-align: left;
+  }
+
+  @include onPC {
+    font-size: 72px;
+    text-align: left;
+  }
+}
+
+h3 {
+  @extend %h1;
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 40px;
+
+  @include onTablet {
+    font-size: 48px;
+  }
+
+  @include onPC {
+    font-size: 48px;
+  }
+}
+
+h4 {
+  z-index: 1;
+  @extend %h1;
+  font-size: 28px;
+  font-weight: 400;
+  text-align: left;
+  text-transform: unset;
+}
+
+p {
+  @extend %p;
+}
+
+.p--menu {
+  @extend %p--menu;
+}
+
+.p--menu2 {
+  @extend %p--menu;
+  transition:
+    transform 0.5s 50ms,
+    opacity 0.5s 50ms;
+}
+
+.p--menu3 {
+  @extend %p--menu;
+  transition:
+    transform 0.5s 100ms,
+    opacity 0.5s 100ms;
+}
+
+.p--menu4 {
+  @extend %p--menu;
+  transition:
+    transform 0.5s 100ms,
+    opacity 0.5s 100ms;
+}
+
+.p--menu5 {
+  @extend %p--menu;
+  transition:
+    transform 0.5s 150ms,
+    opacity 0.5s 150ms;
+}
