--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,37 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  margin: 0;
+  font-family: Montserrat;
+  font-size: var(--h1-font-size); /*30*/
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+%p {
+  margin: 0;
+  font-family: IBM Plex Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  text-align: left;
+}
+
+%p--menu {
+  font-size: 18px;
+  line-height: 1;
+  margin-top: 15px;
+  background-color: #fff;
+  transform: translateX(100px);
+  opacity: 0;
+  transition: transform 0.5s, opacity 0.5s;
+  transform-origin: left;
+
+  @include onTablet {
+    font-size: 24px;
+  }
+
+  @include onPC {
+    font-size: 36px;
+  }
 }
